--- a/css/main.css
+++ b/css/main.css
@@ -46,8 +46,8 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-size: 2.6em;
+    font-family: 'Helvetica';
 }
 p {
     font-size: 1.2em;
@@ -59,12 +59,17 @@ footer {
     font-size: .8em;
 }
 
-ul.projects { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 60%;
+    border-radius: 5px;
+    font-size: 0.8em;
+    padding: 10px;
+    margin: 20px 10px;
+
 }
 
-ul.projects li {
-    list-style: none;
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
-
