--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,11 @@ body {
     border: 2px solid #000;
 }
 .content {
-    padding: 30px 0px;
+    padding: 20px 0px;
+}
+.right{
+    float: right;
+    margin: 0px 50px;
 }
 
 nav ul, footer ul {
@@ -50,7 +54,7 @@ h1 {
     font-family: 'Helvetica';
 }
 p {
-    font-size: 1.2em;
+    font-size: 1em;
     line-height: 1.4em;
     color: #333;
 }
@@ -64,7 +68,6 @@ footer {
     transition: 0.3s;
     width: 60%;
     border-radius: 5px;
-    font-size: 0.8em;
     padding: 10px;
     margin: 20px 10px;
 
