--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
 
 			<div class="content">
 				{{ content }}
+				<p></p><small>Estimated reading time: {{content | reading_time_as_i}}</small></p>
 			</div>
 
 			<footer>
