--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,10 +3,10 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 
-<p>Creation date: <b>{{ page.date | date_to_string }}</b></p>
+<p>Creation date: <b>{{ page.date | date_to_long_string }}</b></p>
 <p>Subject: <b>{{page.subject}}</b></p>
 <p>Semester: <b>{{page.semester}}.</b></p>
-<p>Teacher: <b>{{page.teacher}}</b></p>
+<p>Teacher: <b>{{page.teacher | markdownify}}</b></p>
 <p>Programming language: <b>{{page.language}}</b></p>
 
   {{ content }}
