--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,7 +6,7 @@ layout: default
 <p>Creation date: <b>{{ page.date | date_to_long_string }}</b></p>
 <p>Subject: <b>{{page.subject}}</b></p>
 <p>Semester: <b>{{page.semester}}.</b></p>
-<p>Teacher: <b>{{page.teacher | markdownify}}</b></p>
+<p>Teacher: <b>{{page.teacher}}</b></p>
 <p>Programming language: <b>{{page.language}}</b></p>
 
   {{ content }}
