--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,14 @@ body {
     border: 2px solid #000;
 }
 .content {
+    padding: 30px 30px;
+}
+.task {
     padding: 20px 0px;
 }
 .right{
     float: right;
-    margin: 0px 50px;
+    margin: 0px 0px;
 }
 
 nav ul, footer ul {
