--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 				<ul>
 					<li><a href="/">Home</a></li>
 					<li><a href="/about">About</a></li>
-					<li><a href="/school">School</a></li>
+					<li><a href="/projects">Projects</a></li>
 					<li><a href="/documentation">Documentation</a></li>
 	    		</ul>
 			</nav>
