--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,9 @@ h1 {
     font-size: 2.6em;
     font-family: 'Helvetica';
 }
+h2 {
+    margin-top: 30px;
+}
 p {
     font-size: 1em;
     line-height: 1.4em;
